.metadata/.plugins/org.eclipse.cdt.ui/STM_DAC.build.log
14:12:20 **** Incremental Build of configuration Debug for project STM_DAC ****
make -j16 all 
arm-none-eabi-g++ "../Core/Src/Codec.cpp" -mcpu=cortex-m7 -std=gnu++14 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F767xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -MMD -MP -MF"Core/Src/Codec.d" -MT"Core/Src/Codec.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/Codec.o"
In file included from ../Drivers/CMSIS/Device/ST/STM32F7xx/Include/stm32f7xx.h:203,
                 from ../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_def.h:30,
                 from ../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_rcc.h:29,
                 from ../Core/Inc/stm32f7xx_hal_conf.h:273,
                 from ../Core/Src/Codec.cpp:10:
../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal.h:186:1: error: 'HAL_StatusTypeDef' does not name a type; did you mean 'NOR_StatusTypedef'?
  186 | HAL_StatusTypeDef HAL_Init(void);
      | ^~~~~~~~~~~~~~~~~
      | NOR_StatusTypedef
../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal.h:187:1: error: 'HAL_StatusTypeDef' does not name a type; did you mean 'NOR_StatusTypedef'?
  187 | HAL_StatusTypeDef HAL_DeInit(void);
      | ^~~~~~~~~~~~~~~~~
      | NOR_StatusTypedef
../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal.h:190:1: error: 'HAL_StatusTypeDef' does not name a type; did you mean 'NOR_StatusTypedef'?
  190 | HAL_StatusTypeDef HAL_InitTick(uint32_t TickPriority);
      | ^~~~~~~~~~~~~~~~~
      | NOR_StatusTypedef
../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal.h:214:1: error: 'HAL_StatusTypeDef' does not name a type; did you mean 'NOR_StatusTypedef'?
  214 | HAL_StatusTypeDef HAL_SetTickFreq(HAL_TickFreqTypeDef Freq);
      | ^~~~~~~~~~~~~~~~~
      | NOR_StatusTypedef
../Core/Src/Codec.cpp: In member function 'uint8_t Codec::write(uint8_t, uint8_t)':
../Core/Src/Codec.cpp:41:30: error: 'hi2c1' was not declared in this scope
   41 |  status = HAL_I2C_Mem_Write(&hi2c1, AUDIO_I2C_ADDR, reg, 1, &val, sizeof(val), HAL_MAX_DELAY);
      |                              ^~~~~
../Core/Src/Codec.cpp:41:37: error: 'AUDIO_I2C_ADDR' was not declared in this scope
   41 |  status = HAL_I2C_Mem_Write(&hi2c1, AUDIO_I2C_ADDR, reg, 1, &val, sizeof(val), HAL_MAX_DELAY);
      |                                     ^~~~~~~~~~~~~~
../Core/Src/Codec.cpp:42:1: warning: no return statement in function returning non-void [-Wreturn-type]
   42 | }
      | ^
make: *** [Core/Src/subdir.mk:44: Core/Src/Codec.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

14:12:21 Build Failed. 7 errors, 1 warnings. (took 294ms)

